README added email id

--- a/README
+++ b/README
@@ -8,6 +8,6 @@ Package Contributors (in Alphabetical Order)
 Aartika (?)
 Gautam (?)
 Rajesh (?)
-Swetha (?)
+Swetha (swethab.iitkgp@gmail.com)
 Tarun (?)
 
