--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Soumendra (soumendra@dhanee.com)
 Package Contributors (in Alphabetical Order)
 Aartika (?)
 Gautam (?)
-Rajesh (?)
+Rajesh (krajesh1990@gmail.com)
 Swetha (swethab.iitkgp@gmail.com)
 Tarun (?)
 
