README - added my email id

--- a/README
+++ b/README
@@ -5,7 +5,7 @@ Package Administrator
 Soumendra (soumendra@dhanee.com)
 
 Package Contributors (in Alphabetical Order)
-Aartika (?)
+Aartika (aartika.iitd@gmail.com)
 Gautam (?)
 Rajesh (krajesh1990@gmail.com)
 Swetha (swethab.iitkgp@gmail.com)
